[package]
name = "chain-reader"
version = "0.1.0"
edition = "2018"
authors = ["huy <anhhuy0501@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.126"
serde_derive = "1.0.103"
serde_json = "1.0.64"




############# Solana
[dependencies.solana-client]
package = "solana-client"
git = "https://github.com/massbitprotocol/solana.git"
#path = "../../../../solana/solana_offical/solana/client"
#/home/huy/work/block_chain/solana/solana_offical/solana/client
#branch = "master"

[dependencies.solana-transaction-status]
package = "solana-transaction-status"
git = "https://github.com/massbitprotocol/solana.git"
#tag = "v1.7.4"
#branch = "v1.7"
#path = "../../../../solana/solana_offical/solana/transaction-status"

############# End solana


#[dependencies.graph-chain-ethereum]
#package = "graph-chain-ethereum"
#git = "https://github.com/massbitprotocol/massbit-graph-node"
##rev = "c87281e4d09a0b15b235646dc4b0ae5569da4be2"
#branch = "anhhuy0501-patch-add-pub"

[[bin]] # Bin to run examples
name = "test-solana"
path = "src/test_solana.rs"